# 2025-2-DL

./: 2025_02_lec6(4)_Intro_DL_(code)_linear_regreesion(Simple).ipynb  2025_02_lec7(3)_Intro_DL_(code)_grad_desc.ipynb  README_APP.md  blackjack_model_probabilities_alt.pth  blackjack_model_probabilities_base.pth  blackjack_model_probabilities_deep.pth  blackjack_model_probabilities_shallow.pth  blackjack_model_probabilities_sigmoid.pth  blackjack_model_probabilities_wide.pth  create_training_data.py  create_training_data_probabilities.py  ddqn_blackjack.pth  main.ipynb  main.py  main_probabilities.ipynb  pyproject.toml  reinforced_learning.ipynb  reinforced_learning.py  reinforced_learning_tpu.ipynb
