[project]
name = "2025-2-dl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "notebook>=7.4.7",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
    "streamlit>=1.28.0",
    "scikit-learn>=1.6.1",
]
